# bumblebee-chatbot

./: .gitignore  README.md  pyproject.toml
bumblebee_chatbot/: config.py  main.py  message_printer.py  openai.py  recorder.py  tts.py  wakeword.py
gpt_chatbot/: console_utils.py  message_printer.py  openai.py  recorder.py  soundplayer.py  tts.py  wakeword.py  whispertest.py
